fixed issue with visibility of header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2570,16 +2570,16 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background-color: #1f1815;
+		background-color: #402224;
 		background-attachment: scroll,								scroll;
-		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+		background-image: url("images/overlay.png"), url("../../images/bg_v2.jpg");
 		background-position: top left,							top left;
 		background-repeat: repeat,								no-repeat;
-		background-size: auto,								150%;
+		background-size: auto,								100%;
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
 		left: 0;
-		padding: 8em 4em;
+		padding: 8em 2em;
 		position: fixed;
 		text-align: right;
 		top: 0;
@@ -2611,8 +2611,8 @@ input, select, textarea {
 		}
 
 		#header h1 {
-			color: rgba(255, 255, 255, 0.5);
-			font-size: 1.35em;
+			color: rgb(255, 255, 255, 0.5);
+			font-size: 1.2em;
 			line-height: 1.75em;
 			margin: 0;
 		}
